welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	def getCouleurSol(){
		if(getCouleurSol()==Color.Green){
			Color.green
		}
	}
		
	}
		